--- a/compiled/css/style_split_1.css
+++ b/compiled/css/style_split_1.css
@@ -9449,6 +9449,12 @@ button.close {
   height: 46px;
 }
 
+.header .navbar.navbar-fixed-top .container {
+  width: auto;
+  min-width: 540px;
+  max-width: 1120px;
+}
+
 .header .navbar.navbar-fixed-top .navbar-form {
   border: 0;
   float: left !important;
@@ -14305,8 +14311,4 @@ span.sprite-icons.extra-time {
 
 span.sprite-icons.offside {
   background-position: -58px -50px;
-}
-
-span.sprite-icons.corner-flag {
-  background-position: -86px -50px;
 }
