--- a/compiled/css/style_split_2.css
+++ b/compiled/css/style_split_2.css
@@ -1,3 +1,7 @@
+span.sprite-icons.corner-flag {
+  background-position: -86px -50px;
+}
+
 span.sprite-icons.webmaster-cogs {
   background: url("../img//sprite-icons-webmaster.png") no-repeat -32px -1px;
   width: 20px;
