--- a/src/css/less/bootstrap/rules/navbar.less
+++ b/src/css/less/bootstrap/rules/navbar.less
@@ -16,6 +16,14 @@
         
         img{height: 46px;}
       }
+
+
+    }
+
+    .container {
+      width: auto;
+      min-width: 540px;
+      max-width: 1120px;
     }
     
     .navbar-form{
